--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.88.0",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "jose": "^6.1.3",
     "lucide-react": "^0.469.0",
@@ -19,8 +20,10 @@
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^2.5.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
